Add Live Action videos to Works page

--- a/works.html
+++ b/works.html
@@ -99,13 +99,234 @@
         <h3>Paper Boat</h3>
       </div>
       <!-- Live Action -->
-      <div class="work-card" data-category="live-action">
-        <img src="images/placeholder4.jpg" alt="Live Action 1" />
-        <div class="card-caption">Between Realities</div>
+      <!-- Embedded videos for live action projects. Each video card maintains a 16:9 ratio and falls within the works grid. -->
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/5aJFrhN1tJY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>LOVE DISTANCE</h3>
       </div>
-      <div class="work-card" data-category="live-action">
-        <img src="images/placeholder1.jpg" alt="Live Action 2" />
-        <div class="card-caption">Static Flow</div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/c1QDA8HgLzs?start=7" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Dog Star</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/nmrDIddR8Xg?start=123" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Dye Love</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/RaQEi8Qbsr4?start=19" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Night Walker</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/RuD5iHEr6V8?start=33" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Continent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/Em5rCL0kWLE?start=200" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Parabola</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/MKXR5V5Vnns?start=30" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Idle</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/AcqVTr3IuaY?start=108" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Of All the Universe</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/ZmTZVCRZnCc?start=188" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Tenant</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/YNfxOxkkPu4?start=130" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Square</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/IaRC-ntYahA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>A Love Story</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/vKisOneWhN0?start=80" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Xiamen Arrival</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/jhh1ob6XKd4" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Thanks for Your Love 2022</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/XWU7h4IRNMI?start=24" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Planet B</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://player.vimeo.com/video/523467872" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>GHOSTS - No.1: Abby</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://player.vimeo.com/video/526886136" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>GHOSTS - No.2: Enzo</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://player.vimeo.com/video/535821217" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>GHOSTS - No.3: Absolute</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/rgS4TBaFfyI?start=34" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Housekeeper</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/uxeur0Kyn5I?start=97" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Moth</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/pNOWbkP9DaY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Sha Tin</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/uAHNm8kNs1w?start=22" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Aqualung</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/rbhp6jJhC5I" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>BRIGHT NIGHT - 1st #HomeContent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/0K6XK92s8rk" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>FIERY DRUG - 2nd #HomeContent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/OexPTYxj9JI" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>DEAD MEAT - 3rd #HomeContent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/kv2k25ZeU2g" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>100% HUMAN - 4th #HomeContent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/D9R3ufYIoMU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>TRULY HUMAN - 5th #HomeContent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/zIwzBZHwFbs" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>ONE WHO LIVED HERE - 6th #HomeContent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/tuPTT016h00" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>CALL FROM AN AGENT - 7th #HomeContent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/0-5GQqc6dAE" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>LONELY AS WELL - 8th #HomeContent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/Z72FBnDJ6tE?start=6" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>MY LOVE - 9th #HomeContent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/rwscC4yZ5IQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>DON'T GO - 10th #HomeContent</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/yiBdQZdClBI" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Rain Cloud</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/9404mDOVF-8?start=23" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Tourist</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/1LdW_xizjjQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Wish You Were Here</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/X_3hZpPtKKI?start=16" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Shimmering Voice</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/I3u6SZ7ogCU?start=30" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Atom Hearts</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/o3XBQD4yHws" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Meteora</h3>
+      </div>
+      <div class="video-card" data-category="live-action">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/bkNSmeebl-c" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Solstice</h3>
       </div>
       <!-- Animation -->
       <div class="work-card" data-category="animation">
