Add Animation videos to Works page

--- a/works.html
+++ b/works.html
@@ -329,9 +329,78 @@
         <h3>Solstice</h3>
       </div>
       <!-- Animation -->
-      <div class="work-card" data-category="animation">
-        <img src="images/placeholder3.jpg" alt="Animation 1" />
-        <div class="card-caption">Liquid Dreams</div>
+      <!-- Embedded videos for animation projects. Each video card maintains a 16:9 ratio and falls within the works grid. -->
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/TzrG5KKzWv4?start=2" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>The Leave</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/u-SH98LNRtQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Anniversary</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/JtKsLJYtO7I?start=26" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>the Prophet Show</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/_LGsjA-i0DE?start=17" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Peppertarian</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/Sunyo_VFoJg?start=12" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Book 846</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/4lN18CgdNAI?start=11" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Sand and Dust</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/wOEvjLP5ML8?start=6" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>God of Air</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/cE_eXuV5iyU?start=1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>All of It</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/X8z-vljvISo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>THE BUREAUCRATS: No.1 BANKER</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/Z768zgJuF20?start=7" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>THE BUREAUCRATS: No.2 POLICE</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/MDxmFy8HaZY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>THE BUREAUCRATS: No.3 MAILMAN</h3>
+      </div>
+      <div class="video-card" data-category="animation">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/tS-fv1C_320?start=65" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Seed</h3>
       </div>
       <!-- Documentary -->
       <div class="work-card" data-category="documentary">
