Add Documentary videos to Works page

--- a/works.html
+++ b/works.html
@@ -403,9 +403,96 @@
         <h3>Seed</h3>
       </div>
       <!-- Documentary -->
-      <div class="work-card" data-category="documentary">
-        <img src="images/placeholder4.jpg" alt="Documentary 1" />
-        <div class="card-caption">Fragments of Truth</div>
+      <!-- Embedded videos for documentary projects. Each video card maintains a 16:9 ratio and falls within the works grid. -->
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/U1UfnKfDSvU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Nanjing Duck Blood Soup</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/G3O-Y1c3ck8?start=412" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Shanghai on Air</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/8nxaF3Z3gzM?start=14" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Copy of Her Echo</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/CSOxP1C2zKg?start=2" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Pure.</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/QLFLYdA394E" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>2024 INK Tattoo Festival Shanghai</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://player.vimeo.com/video/457391215" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>The Unreasonables Season Trailer</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/_S4oHJzknxI?start=2" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Life Around Pizza</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/VQKfqy8eeeg?start=2" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Radioactivity</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://player.vimeo.com/video/421297655" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>The Iron Hammer Trailer: We Are One Global Film Festival</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/HOoRVfW957w?start=1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Body Song</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/Z6ylgZUIG0M" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Message</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/cHc0NLUEh18" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>行动的真迹工作坊</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/K3oP2urNyfQ" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>亲子工作坊</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/hUEvvzlPsHM" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Tracing Ben (part 1)</h3>
+      </div>
+      <div class="video-card" data-category="documentary">
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube.com/embed/vm_PLVFrIHs" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <h3>Tracing Ben (part 2)</h3>
       </div>
       <!-- Branded -->
       <div class="work-card" data-category="branded">
